# rs-arxiv-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: copy_readme.yml
arxiv-tools/: Cargo.toml  README.md
arxiv-tools/src/: lib.rs  tests.rs
