[workspace]
resolver = "2"
members = ["arxiv-tools"]

[workspace.package]
version = "1.1.1"
edition = "2021"
authors = ["akitenkrad"]
description = "Tools for arXiv API."
repository = "https://github.com/akitenkrad/rs-arxiv-tools.git"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }

[workspace.metadata.release]
tag-prefix = ""
