[package]
name = "arxiv-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = "0.4.39"
percent-encoding = "2.3.1"
quick-xml = "0.37.1"
reqwest = "0.12.9"
scraper = "0.22.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[package.metadata.release]
tag = true
